# verify-smt

./: Cargo.toml  readme.md
src/: blake2b.rs  lib.rs  merkle_proof.rs  merkle_verify.rs  traits.rs  tree.rs
tests/: blake.rs  verify.rs
