[package]
name = "smt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2b-rs = "0.2"
blake2 = "0.10.6"
digest = { version = "0.10.3", features = ["dev"] }

[dev-dependencies]
hex-literal = "0.2.2"
hex = "0.4.3"
